# SDR-agent-Salescode

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Procfile  README.md  SCOUT_UPGRADE_PLAN.md  TOOLS_AND_COSTS_AUDIT.md  VERI_AGENT_DESIGN.md  VERI_HOW_IT_WORKS.md  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh  vercel.json
backend/: api.py  config.py  main.py  orchestrator.py  state.py
backend/agents/: fini.py  scout.py  searcher.py  veri.py
backend/prompts/: searcher_prompts.py  veri_prompts.py
backend/tests/: test_pipeline_live.py
backend/tools/: domain_discovery.py  llm.py  n8n.py  sales_nav_scraper.py  search.py  sheets.py  theorg.py  unipile.py  wikidata.py  zerobounce.py
backend/utils/: dm_selection.py  pause.py  progress.py  role_selection.py
docs/: ARCHITECTURE.md  searcher_prompts_review.md
src/: __init__.py  api.py  config.py  main.py  state.py
src/agents/: fini.py  searcher.py  veri.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/command-center/: page.tsx
src/app/fini/: page.tsx
src/app/searcher/: page.tsx
src/components/: ConfirmationModal.tsx  LogStream.tsx  Sidebar.tsx
src/lib/: api.ts  stores.ts
src/prompts/: fini_prompts.py
src/tools/: domain_discovery.py  llm.py  n8n.py  search.py  sheets.py  theorg.py  unipile.py  wikidata.py  zerobounce.py
src/utils/: logging.py  rate_limiter.py  retry.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css
(+10 files in other folders)
